# memslicer

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: changelog.yml  publish.yml
src/memslicer/: __init__.py  __main__.py  cli.py  cli_enrich.py  cli_sysctx.py
src/memslicer/acquirer/: __init__.py  base.py  bridge.py  build_id_post.py  elf_notes.py  engine.py  frida_acquirer.py  frida_bridge.py  gdb_bridge.py  identity.py  investigation.py  lldb_bridge.py  os_detail.py  platform_detect.py  region_filter.py
src/memslicer/msl/: compression.py  constants.py  encryption.py  (+4 more)
tests/: conftest.py  test_block_cross_referencing.py  test_block_flags_audit.py  test_build_id_post.py  test_cli.py  test_cli_system_context.py  test_collectors_android.py  test_collectors_darwin.py  test_collectors_factory.py  test_collectors_fallback.py  test_collectors_io.py  test_collectors_ios.py  test_collectors_linux.py  test_collectors_windows.py  test_compression.py  test_connection_byte_order.py  test_constants.py  test_elf_notes.py  test_engine.py  test_engine_attribution.py  test_engine_module_buildid.py  test_frida_acquirer.py  test_frida_bridge.py  test_frida_js_loader.py  test_frida_remote_collector.py  test_gdb_bridge.py  test_hash_algo.py  test_header_verification.py  test_integrity.py  test_investigation_e2e.py  test_linux_connectivity.py  test_linux_rootkit_posture.py  test_lldb_bridge.py  test_memslicer_enrich_cli.py  test_module_list_index_manifest.py  test_msl_iterator.py  test_msl_writer.py  test_msl_writer_p16_blocks.py  test_os_detail_packing.py  test_padding.py  (+7 more)
(+25 files in other folders)
