[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memslicer"
version = "0.2.1"
description = "MSL memory dump tool with pluggable debugger backends (Frida, GDB, LLDB)"
requires-python = ">= 3.10"
license = "Apache-2.0"
dependencies = [
    "blake3>=0.4",
    "click>=8.0",
    "zstandard>=0.20",
    "lz4>=4.0",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "frida-tools>=12.0",
]

[project.scripts]
memslicer = "memslicer.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build]
packages = ["src/memslicer"]
